compile_log.txt
INFO ESPHome 2025.11.2
INFO Reading configuration test-configs\test-espidf-esp32c6.yaml...
INFO Generating C++ source...
INFO Compiling app... Build path: D:\devprjs\DsmrCustom\dsmr-custom\test-configs\.esphome\build\test-espidf-c6
Processing test-espidf-c6 (board: esp32-c6-devkitc-1; framework: espidf; platform: https://github.com/pioarduino/platform-espressif32/releases/download/55.03.31-2/platform-espressif32.zip)

--------------------------------------------------------------------------------

INFO Package configuration completed successfully
INFO Package configuration completed successfully
HARDWARE: ESP32C6 160MHz, 320KB RAM, 4MB Flash

 - contrib-piohome @ 3.4.4 

 - framework-espidf @ 3.50501.0 (5.5.1) 

 - tool-cmake @ 4.0.3 

 - tool-esp-rom-elfs @ 2024.10.11 

 - tool-esptoolpy @ 5.1.0 

 - tool-mklittlefs @ 3.2.0 

 - tool-ninja @ 1.13.1 

 - tool-scons @ 4.40801.0 (4.8.1) 

 - toolchain-riscv32-esp @ 14.2.0+20241119

Reading CMake configuration...

Dependency Graph

|-- noise-c @ 0.1.10

Compiling .pioenvs\test-espidf-c6\src\esphome\components\dsmr_custom\dsmr.cpp.o

Compiling .pioenvs\test-espidf-c6\src\esphome\components\mdns\mdns_esp32.cpp.o

Compiling .pioenvs\test-espidf-c6\src\esphome\components\network\util.cpp.o

Compiling .pioenvs\test-espidf-c6\src\esphome\components\ota\ota_backend.cpp.o

Compiling .pioenvs\test-espidf-c6\src\esphome\components\ota\ota_backend_esp_idf.cpp.o

Compiling .pioenvs\test-espidf-c6\src\esphome\components\safe_mode\safe_mode.cpp.o

Compiling .pioenvs\test-espidf-c6\src\esphome\components\sensor\automation.cpp.o

Compiling .pioenvs\test-espidf-c6\src\esphome\components\sensor\filter.cpp.o

Compiling .pioenvs\test-espidf-c6\src\esphome\components\sensor\sensor.cpp.o

Compiling .pioenvs\test-espidf-c6\src\esphome\components\sha256\sha256.cpp.o

Compiling .pioenvs\test-espidf-c6\src\esphome\components\socket\bsd_sockets_impl.cpp.o

Compiling .pioenvs\test-espidf-c6\src\esphome\components\socket\socket.cpp.o

Compiling .pioenvs\test-espidf-c6\src\esphome\components\text_sensor\filter.cpp.o

Compiling .pioenvs\test-espidf-c6\src\esphome\components\text_sensor\text_sensor.cpp.o

Compiling .pioenvs\test-espidf-c6\src\esphome\components\uart\uart.cpp.o

Compiling .pioenvs\test-espidf-c6\src\esphome\components\uart\uart_component.cpp.o

src/esphome/components/dsmr_custom/dsmr.cpp:1036:2: error: #endif without #if

 1036 | #endif // USE_ARDUINO

      |  ^~~~~
*** [.pioenvs\test-espidf-c6\src\esphome\components\dsmr_custom\dsmr.cpp.o] Error 1

========================= [FAILED] Took 17.32 seconds =========================

